크론 설정 추가 및 알고리즘 시행 여부 확인 / 조건부 크롤링 시행 설정